<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="AND">AND</string>
    <string name="ANTH">ANTH</string>
    <string name="BHU">BHU</string>
    <string name="BHUT">BHUT</string>
    <string name="Baskara">Baskara</string>
    <string name="CS">CS</string>
    <string name="Cuspal">பாவ</string>
    <string name="DAS">DAS</string>
    <string name="DASA">DASA</string>
    <string name="DMS">DMS</string>
    <string name="Dasa">தசை</string>
    <string name="Default_Language">Default Language</string>
    <string name="Details">Details</string>
    <string name="LDasa">லத</string>
    <string name="Particular">Particulars</string>
    <string name="PlacesList">p List</string>
    <string name="Planets">கிர</string>
    <string name="Pln">Pln</string>
    <string name="SBL">SBL</string>
    <string name="SDate">S.Date</string>
    <string name="SGN">SGN</string>
    <string name="SSL">SSL</string>
    <string name="STL">STL</string>
    <string name="Settings">Settings</string>
    <string name="Settings_Btn_Save">Save Settings</string>
    <string name="Settings_Language_Value">English</string>
    <string name="Splash_Header">Published by \10 www.baskaraastrology.com</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ant_details_title">Ant Details</string>
    <string name="app_name">Baskara Astrology</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bhuti_details_title">Bhuti Details</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_Close">Close</string>
    <string name="btn_Help">Help</string>
    <string name="btn_Run">Run Chart</string>
    <string name="btn_Save">Save</string>
    <string name="btn_open">Open</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="current_dasa_bhu_ant_details_title">Current Dasa/Bhu/Ant Details</string>
    <string name="cuspal_chart_details_title">Cuspal Chart Details</string>
    <string name="data">Data</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="help_header">Help</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="horary_prompt">1</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="input_Default_Place">Default Place</string>
    <string name="input_Lat">Lat</string>
    <string name="input_Lat_NS">N</string>
    <string name="input_Lat_dd">11</string>
    <string name="input_Lat_mm">59</string>
    <string name="input_Lon">Long</string>
    <string name="input_Lon_EW1">E</string>
    <string name="input_Lon_dd">79</string>
    <string name="input_Lon_mm">59</string>
    <string name="input_Place">Place</string>
    <string name="input_Place_value">Pondicherry,India</string>
    <string name="input_Tc">T.Cor</string>
    <string name="input_Tc_PM">+</string>
    <string name="input_Tc_hh">00</string>
    <string name="input_Tc_mm">00</string>
    <string name="input_Tz">T.Zone</string>
    <string name="input_Tz_PM">+</string>
    <string name="input_Tz_hh">05</string>
    <string name="input_Tz_mm">30</string>
    <string name="input_date">Date</string>
    <string name="input_date_day">21</string>
    <string name="input_date_month">05</string>
    <string name="input_date_year">1980</string>
    <string name="input_header">Enter Input details</string>
    <string name="input_name">Name</string>
    <string name="input_name_value">Baalaji Rajan</string>
    <string name="input_time">Time</string>
    <string name="input_time_hh">17</string>
    <string name="input_time_mm">00</string>
    <string name="input_time_ss">00</string>
    <string name="maha_dasa_title">MAHA Dasa</string>
    <string name="menu">Main Menu</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_play">Natal Chart</string>
    <string name="menu_item_scores">Horary Chart</string>
    <string name="menu_item_settings">Settings</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="navamsa_details_title_b">Navamsa Details</string>
    <string name="no_scores">No scores to show.</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="planet_details_title">Planet Details</string>
    <string name="planet_significator_details_title">Planet Significator Details</string>
    <string name="rp_date_time_title">RP Date / Time :</string>
    <string name="ruling_planets">Ruling Planets</string>
    <string name="ruling_planets_title">Ruling Planets</string>
    <string name="ruling_planets_title_a">Ruling Planets</string>
    <string name="search_menu_title">Search</string>
    <string name="spinner">AndroidSpinnerExample</string>
    <string name="star_details_tile">Star details -9 Days</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tab_head1">Details</string>
    <string name="tab_head2">Cuspal</string>
    <string name="tab_head3">Planets</string>
    <string name="tab_head4">Dasa</string>
    <string name="tab_header">Horoscope details</string>
    <string name="title_activity_client_hora">Client_hora</string>
    <string name="title_activity_lagna_dasa_">LagnaDasa_Activity</string>
    <string name="vimsottri_dasa_details_title">Vimsottri Dasa Details</string>
</resources>
